--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,19 @@
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
+
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <nav class="d-flex justify-content-between navbar navbar-expand-lg navbar-light bg-light px-3">
+      <%= link_to "Wikinimous", articles_path, class: "text-decoration-none navbar-brand" %>
+      <%= link_to "New Article", new_article_path, class: "text-decoration-none btn btn-primary" %>
+    </nav>
     <%= yield %>
   </body>
 </html>
