--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,9 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+.article-content h2 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-weight: normal;
+}
