--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,9 @@
-<ul class="list-unstyled container mx-auto py-4" style="width: 38%;">
+<ul class="list-unstyled">
   <% @articles.each do |article| %>
     <li>
-      <h1 class="fs-2 text-primary fw-normal"><%= article.title %></h1>
+      <%= link_to article_path(article) do %>
+        <h1 class="fs-2 text-primary fw-normal"><%= article.title %></h1>
+      <% end %>
       <p><%= truncate(article.content, length: 100) %></p>
     </li>
   <% end %>
