--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,10 @@
 <div class="d-flex align-items-center gap-2">
   <h1><%= @article.title %></h1>
   <%= link_to '<i class="fa-solid fa-pen text-primary fs-4"></i>'.html_safe, edit_article_path(@article) %>
+  <%= link_to '<i class="fa-solid fa-trash text-primary fs-4"></i>'.html_safe, article_path(@article),
+                        data: {turbo_method: :delete,
+                        turbo_confirm: "Are you sure?"}
+  %>
 </div>
 
 <hr class="custom-line">
