--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
 <ul class="list-unstyled">
   <% @articles.each do |article| %>
     <li>
-      <%= link_to article_path(article) do %>
-        <h1 class="fs-2 text-primary fw-normal"><%= article.title.gsub(/\.$/, '') %></h1>
+      <%= link_to article_path(article), class: "link" do %>
+        <h1 class="fs-2 fw-normal title"><%= article.title.gsub(/\.$/, '') %></h1>
       <% end %>
       <p><%= truncate(article.content.split("<h2>").first, length: 100) %></p>
     </li>
